Resolve overflow-x at Portfolio, and overflow at Home due to too hight project pics

--- a/src/app/partials/project/project.component.styl
+++ b/src/app/partials/project/project.component.styl
@@ -88,7 +88,6 @@
         &__img
             width 100%
             height auto
-            max-height 60vh
             margin 10px 0 5px 0
         &__description
             width calc(100% - 50px)
